--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ defusedxml==0.7.1
 dj-database-url==2.1.0
 dj-email-url==1.0.6
 dj-rest-auth==2.1.11
-Django==4.0.10
+Django>=2.0
 django-allauth==0.48.0
 django-cache-url==3.4.5
 django-cors-headers==3.10.1
